--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,10 @@
     "CONTRIBUTING"
   ],
   "dependencies": {
-    "jquery": ">= 1.9.1",
+    "jquery": "~2.1.4",
     "jquery.hotkeys": "https://github.com/jeresig/jquery.hotkeys.git#master",
-    "fontawesome": ">= 3.0.0",
-    "bootstrap": ">= 2.0",
-    "google-code-prettify": ">= 1.0.1"
+    "fontawesome": "~4.3.0",
+    "bootstrap": "~3.3.4",
+    "google-code-prettify": "~1.0.4"
   }
 }
