--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-wysiwyg",
-  "description": "Tiny Bootstrap and JQuery Based WISWYG rich text editor based on browser execCommand.",
-  "version": "1.0.2",
+  "description": "A tiny Bootstrap and jQuery based WYSIWYG rich text editor based on the browser function execCommand.",
+  "version": "1.0.3-beta",
   "keywords": [
     "css",
     "js",
