--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "grunt-bootlint": "^0.9.1",
     "grunt-bumpup": "^0.6.2",
     "grunt-check-pages": "^0.9.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-rename": "^0.0.3",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-rename": "0.0.3",
+    "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-release": "^0.13.0",
     "gulp": "^3.9.0",
-    "gulp-bootlint": "^0.5.0",
+    "gulp-bootlint": "^0.6.4",
     "gulp-html5-lint": "^1.0.1",
-    "gulp-jshint": "^1.11.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.4.2"
   },
   "repository": {
     "type": "git",
