--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0"
   },
+  "scripts": {
+      "test": "grunt jscs"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/steveathon/bootstrap-wysiwyg"
