--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     {
       "name": "Tyler Hughes",
       "url": "https://github.com/RandomlyKnighted"
+    },
+    {
+      "name": "Rory Hunter",
+      "url": "https://github.com/pugnascotia"
     }
   ],
+  "scripts": {
+    "postinstall": "bower install",
+    "build": "gulp"
+  },
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.7.9",
     "check-pages": "^0.9.0",
     "grunt": "^0.4.5",
     "grunt-bootlint": "^0.9.1",
